# devday_hyd_agents

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  result.json
part1_basics_langgraph/: 1_simple_workflow.py  2_llm_function.py  3_prompt_template.py  part1_readme.md  session1_basics_langgraph.ipynb  task1_soln.py
part2_tools_langgraph/: 3_human_in_loop.py  session2_tools_langgraph.ipynb  task2_soln.py
part3_pydantic_validations/: session3_pydantic_validations.ipynb
part3_pydantic_validations/part3_pydantic_validations/: result.json
part4_rag_workflows/: session4_rag.ipynb
part4_rag_workflows/langchain_documents/: chroma.sqlite3
part4_rag_workflows/langgraph_documents/: chroma.sqlite3
part5_capstone_project/: proposal.md  routing.py  smart_customer_support_agent.py
part6_multiagent_system/: multiagent_system.ipynb
part7_mcp_a2a/: client.py  multi_server_client.py  weather_server.py
